# OptiFund

./: .gitignore  README.MD  pyproject.toml  requirements.txt
src/analytics/: README.MD  returns.py
src/analytics/helpers/: validateTickers.py
src/analytics/indicators/: README.MD  indicators.py  returns.py  sma_strategy.py
src/analytics/optimization/: backtesting.py  markowitz.py  markowitz_backtesting.py  run_markowitz_example.py
src/analytics/risk/: risk_metrics.py
src/analytics/risk_analysis/: risk_analysis.py  someTheory.md
src/analytics/strategies/: run_sma_example.py  sma_strategy.py
src/data/: fetch_data.py
src/examples/: markowitz_backtesting_example.py  run_markowitz_example.py  run_risk_metrics_example.py  run_sma_example.py
src/ui/: Hello.py
src/ui/pages/: 1_markowitz_app.py  2_smaStrat.py  markowitz_theory.py  smaStratTheory.py
src/visualization/: plot.py
tests/: test_returns.py
