[project]
name = "optifund"
version = "0.1.0"
description = "Portfolio analytics and trading strategy toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Hamza Khalfi", email = "mchamz72@gmail.com" } ]
license = { text = "MIT" }
keywords = ["finance", "portfolio", "analytics"]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "matplotlib",
    "seaborn",
    "scipy",
    "yfinance",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"